// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when called from Babel correctly namespaces all together 1`] = `
"
define('a-module', ['test-package$a-module', 'provider$imp-module', 'no-namespace-module', './a-local-module', 'shims$fs'], function () {
	require('test-package$a-module');
	require('provider$imp-module');
	require('no-namespace-module');
	require('./a-local-module');
	require('shims$fs');
});"
`;

exports[`when called from Babel correctly namespaces define() dependencies 1`] = `
"
define(['test-package$a-module', 'provider$imp-module', 'no-namespace-module', './a-local-module', 'shims$fs'], function () {});"
`;

exports[`when called from Babel correctly namespaces require modules 1`] = `
"
define(function () {
	require('test-package$a-module');
	require('provider$imp-module');
	require('no-namespace-module');
	require('./a-local-module');
	require('shims$fs');
});"
`;

exports[`when called from Babel does not namespace define() module name 1`] = `
"
define('a-module', function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces all together 1`] = `
"
define('root-package$a-module', ['root-package$a-module', 'provider$imp-module', 'no-namespace-module', './a-local-module', 'shims$fs'], function () {
	require('root-package$a-module');
	require('provider$imp-module');
	require('no-namespace-module');
	require('./a-local-module');
	require('shims$fs');
});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces define() dependencies 1`] = `
"
define(['root-package$a-module', 'provider$imp-module', 'no-namespace-module', './a-local-module', 'shims$fs'], function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces define() module name 1`] = `
"
define('root-package$a-module', function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces require modules 1`] = `
"
define(function () {
	require('root-package$a-module');
	require('provider$imp-module');
	require('no-namespace-module');
	require('./a-local-module');
	require('shims$fs');
});"
`;

exports[`when called from liferay-npm-bundler does not namespace define() module name in the root package 1`] = `
"
define('a-module', function () {});"
`;

exports[`when called from liferay-npm-bundler logs results correctly 1`] = `
Array [
  Object {
    "level": "info",
    "source": "namespace-modules",
    "things": Array [
      "Namespaced",
      1,
      "define() names,",
      3,
      "define() dependencies,",
      "and",
      3,
      "require() names",
    ],
  },
]
`;
